# katib

./: .dockerignore  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  ADOPTERS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.conformance  Gopkg.toml  Makefile  OWNERS  PROJECT  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  buf.gen.yaml  build.sh  cliff.toml  deploy.sh  go.mod  go.sum  img.rar  prow_config.yaml  requirements.txt  setup.py  setup_api.py  setup_suggestion.py  submit_release_job.sh  transfer_2D.py  截圖.rar
api/: README.md  api.pb.go  api.proto  pyproject.toml
api/docs/: V1beta1AlgorithmSetting.md  V1beta1AlgorithmSpec.md  V1beta1CollectorSpec.md  V1beta1ConfigMapSource.md  V1beta1Experiment.md  V1beta1ExperimentCondition.md  V1beta1ExperimentStatus.md  V1beta1FeasibleSpace.md  V1beta1FilterSpec.md  V1beta1Observation.md  V1beta1ParameterAssignment.md  V1beta1Suggestion.md  V1beta1SuggestionList.md  V1beta1SuggestionSpec.md  V1beta1Trial.md  V1beta1TrialAssignment.md  V1beta1TrialList.md  V1beta1TrialParameterSpec.md  V1beta1TrialSpec.md
api/kubeflow_katib_api/: __init__.py  api_client.py  configuration.py  rest.py
api/kubeflow_katib_api/models/: __init__.py  v1beta1_algorithm_setting.py  v1beta1_algorithm_spec.py  v1beta1_collector_spec.py  v1beta1_config_map_source.py  v1beta1_early_stopping_rule.py  v1beta1_early_stopping_setting.py  v1beta1_early_stopping_spec.py  v1beta1_experiment.py  v1beta1_experiment_condition.py  v1beta1_experiment_list.py  v1beta1_experiment_spec.py  v1beta1_experiment_status.py  v1beta1_feasible_space.py  v1beta1_file_system_path.py  v1beta1_filter_spec.py  v1beta1_graph_config.py  v1beta1_metric.py  v1beta1_metric_strategy.py  v1beta1_metrics_collector_spec.py  v1beta1_nas_config.py  v1beta1_objective_spec.py  v1beta1_observation.py  v1beta1_operation.py  v1beta1_optimal_trial.py  v1beta1_parameter_assignment.py  v1beta1_parameter_spec.py  v1beta1_source_spec.py  v1beta1_suggestion.py  v1beta1_suggestion_condition.py  v1beta1_suggestion_list.py  v1beta1_suggestion_spec.py  v1beta1_suggestion_status.py  v1beta1_trial.py  v1beta1_trial_assignment.py  v1beta1_trial_condition.py  v1beta1_trial_list.py  v1beta1_trial_parameter_spec.py  v1beta1_trial_source.py  v1beta1_trial_spec.py  (+2 more)
api/openapi-spec/: README.md  swagger.json
api/python/: api_pb2_grpc.py
api/python_api/: README.md  pyproject.toml
api/python_api/kubeflow_katib_api/: __init__.py
api/python_api/kubeflow_katib_api/models/: __init__.py  io_k8s_api_core_v1_affinity.py  io_k8s_api_core_v1_app_armor_profile.py  io_k8s_api_core_v1_attached_volume.py  io_k8s_api_core_v1_avoid_pods.py  io_k8s_api_core_v1_aws_elastic_block_store_volume_source.py  io_k8s_api_core_v1_azure_disk_volume_source.py  io_k8s_api_core_v1_azure_file_persistent_volume_source.py  io_k8s_api_core_v1_azure_file_volume_source.py  io_k8s_api_core_v1_binding.py  io_k8s_api_core_v1_capabilities.py  io_k8s_api_core_v1_ceph_fs_persistent_volume_source.py  io_k8s_api_core_v1_ceph_fs_volume_source.py  (+313 more)
cli/: Dockerfile  (+1 more)
(+3635 files in other folders)
